增加用户消息通知查询接口